fix align

--- a/_stylesheets/base/_content.scss
+++ b/_stylesheets/base/_content.scss
@@ -112,6 +112,7 @@ span.highlight {
     line-height: 26px;
     padding: 15px 20px;
     vertical-align: top;
+    text-align: center;
     @media (max-width: $mobile) {
       padding: 10px;
     }
@@ -123,6 +124,10 @@ span.highlight {
     &:last-child {
       text-align: center;
     }
+  }
+
+  tr td:first-child {
+    text-align: left;
   }
 
   th {
